--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -196,7 +196,8 @@
       display: block;
       overflow: hidden;
       position: relative;
-      padding-bottom: 58%;
+      // padding-bottom: 58%;
+      padding-bottom: 100%;
 
       img {
         top: 0;
